objects/QaObj1__c.object
<CustomObject>
    <fields>
        <fullName>AccountLookupField1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj1s (Account)</relationshipLabel>
        <relationshipName>QaObj1s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountMasterField2__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj1s (Account)</relationshipLabel>
        <relationshipName>QaObj1s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field5__c</fullName>
        <label>Field5</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PickField1__c</fullName>
        <label>PickField1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>222</fullName>
                </value>
                <value>
                    <fullName>333</fullName>
                </value>
                <value>
                    <fullName>444</fullName>
                </value>
                <value>
                    <fullName>555</fullName>
                </value>
                <value>
                    <fullName>666</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QaObj1</label>
    <nameField>
        <label>QaObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QaObj1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valrule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>Please enter   value</errorMessage>
    </validationRules>
</CustomObject>